# syslog-ng-old

./: configure.ac  configure.in
debian/: changelog
lib/: Makefile.am  cfg-grammar.y  logreader.c  logreader.h  syslog-ng.h  timeutils.c  value-pairs.c  value-pairs.h
lib/compat/: Makefile.am  compat.h  memrchr.c  pread.c  strcasestr.c  strtollmax.c
lib/rewrite/: rewrite-expr-grammar.ym  rewrite-set.c  rewrite-set.h  rewrite-subst.c  rewrite-subst.h
modules/afamqp/: afamqp-grammar.ym  afamqp.c  afamqp.h
modules/affile/: Makefile.am  affile-common.c  affile-common.h  affile-dest.c  affile-dest.h  affile-grammar.ym  affile-source.c  affile-source.h  filemonitor.c  path_getmaxlen.c  path_getmaxlen.h  poll-file-changes.c
modules/affile/tests/: Makefile.am  test_affile_open_file.c
modules/afmongodb/: afmongodb-grammar.ym  afmongodb.c  afmongodb.h
modules/afsql/: afsql.c
modules/dbparser/: patterndb.c
tests/unit/: test_value_pairs.c
